--- a/index.html
+++ b/index.html
@@ -146,20 +146,23 @@
       <!-- Original Section -->
       <div id="original-section" class="fade-section active">
         <h1 class="animated-lines">
-          <span class="line" style="display: block; opacity: 0"
-            >Musicians & Singers</span
+          <a
+            href="musicians-singers.html"
+            class="line"
+            style="display: block; opacity: 0"
+            >Musicians & Singers</a
           >
-          <span class="line" style="display: block; opacity: 0"
-            >Actors and Actresses</span
+          <a
+            href="actors-actresses.html"
+            class="line"
+            style="display: block; opacity: 0"
+            >Actors and Actresses</a
           >
-          <span class="line" style="display: block; opacity: 0"
-            >Sports Personalities (Athlete-Celebrities)</span
-          >
-          <span class="line" style="display: block; opacity: 0"
-            >Social Media Influencers</span
-          >
-          <span class="line" style="display: block; opacity: 0"
-            >Celebrity Chefs / Food Entertainers</span
+          <a
+            href="sports-personalities.html"
+            class="line"
+            style="display: block; opacity: 0"
+            >Sports Personalities (Athlete-Celebrities)</a
           >
         </h1>
         <div class="links animated-links">
