--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
         }
       }
     </style>
+    <style>
+      .animated-lines a {
+        white-space: nowrap;
+        overflow: visible;
+        text-overflow: clip;
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        cursor: default;
+      }
+    </style>
   </head>
   <body>
     <div class="caa-logo">CAA</div>
