--- a/about-us.html
+++ b/about-us.html
@@ -381,12 +381,6 @@
             <a class="nav-main-link" href="sports-personalities.html"
               >Sports Personalities (Athlete-Celebrities)</a
             ><br />
-            <a class="nav-main-link" href="social-media-influencers.html"
-              >Social Media Influencers</a
-            ><br />
-            <a class="nav-main-link" href="models-fashion-icons.html"
-              >Models & Fashion Icons</a
-            ><br />
           </h1>
           <ul class="navbar-secondary-links">
             <li>
@@ -412,56 +406,13 @@
       <h3 class="about-caa-headline staggered">
         CAA delivers world-class opportunities to world-class clients.
       </h3>
-      <p class="about-caa-text staggered">
-        Positioned at the nexus of talent, content, brands, technology, sports,
-        and live events, CAA creates limitless opportunities for the
-        storytellers, trendsetters, icons, and thought leaders who shape popular
-        culture.
-      </p>
-      <p class="about-caa-text staggered">
-        Across film, television, music, sports, brands, the creator economy, and
-        beyond, we represent thousands of the world’s leading actors, directors,
-        writers, producers, musical artists, comedians, authors, athletes,
-        coaches, broadcasters, teams, leagues, digital creators, designers,
-        fashion talent, consumer brands, and more.
-      </p>
-      <p class="about-caa-text staggered">
-        In service of them, we are committed to remaining the strongest, most
-        vibrant, and most innovative service company in the world.
-      </p>
-      <p class="about-caa-text staggered">
-        Since our founding in 1975, CAA has continued to deliver on its promise
-        that every client is represented by the whole agency. This collaborative
-        approach benefits our clients now more than ever, as they look to build
-        their careers and their brands across multiple disciplines and
-        platforms.
-      </p>
-      <p class="about-caa-text staggered">
-        With a global network of employees and strategic partners in North
-        America, Europe, Asia, and beyond, CAA taps its unequaled internal and
-        external ecosystem of experts, relationships, access, and industry
-        intelligence to help ensure that our clients achieve their goals.
-      </p>
-      <p class="about-caa-text staggered">
-        The trailblazer of the industry, CAA has created an ever-widening scope
-        of services and businesses. We were the first talent agency to build a
-        sports business, create an investment bank, launch a venture fund, found
-        technology start-up companies, establish a business in China, create a
-        brand marketing services business, and launch a philanthropic arm, among
-        other industry innovations.
-      </p>
-      <p class="about-caa-text staggered">
-        It is also our goal to lead the way in diversity, advocating with
-        marketplace buyers for talent from historically underrepresented groups
-        – and for the cultural and commercial value of inclusion. CAA continues
-        to increase the diversity of our talent roster and our employees, and
-        always will.
-      </p>
-      <p class="about-caa-text staggered">
-        With a passion matched only by that of our clients, CAA is committed to
-        crafting precedent-setting deals and building new brands and businesses
-        driven by our clients’ ideas, interests, and opportunities.
-      </p>
+      <p class="about-caa-text staggered"> At CAA, we stand at the intersection of talent, brands, entertainment, sports, and technology — creating opportunities that define culture and inspire audiences worldwide. </p>
+       <p class="about-caa-text staggered"> From film, television, and music to sports, digital creators, fashion, and beyond, we represent some of the world’s most iconic and influential names — actors, musicians, athletes, directors, authors, designers, and more. </p>
+        <p class="about-caa-text staggered"> Our mission is simple: empower storytellers, trendsetters, and visionaries to grow their careers and expand their impact across every platform imaginable. </p>
+         <p class="about-caa-text staggered"> Since our founding in 1975, we’ve pioneered a collaborative approach where every client is backed by the full strength of our agency. This model allows us to build careers, brands, and legacies that thrive in today’s fast‑changing world. </p> 
+         <p class="about-caa-text staggered"> With a global presence and a vast network of experts and partners, we deliver unmatched access, insight, and strategy — ensuring our clients are always positioned to succeed. </p>
+          <p class="about-caa-text staggered"> CAA continues to lead the industry in innovation, diversity, and cultural influence — from launching groundbreaking ventures to championing underrepresented voices and pushing the boundaries of what’s possible. </p> 
+          <p class="about-caa-text staggered"> Fueled by passion and driven by results, we craft deals, build brands, and create opportunities that set new standards for the future of talent representation. </p>
     </section>
 
     <!-- Stagger Animation Script -->
