--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         background: #292d34;
         color: #fff;
         font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-size: 30px;
         min-height: 100vh;
         margin: 0;
         padding: 0;
       }
       .caa-logo {
-        font-size: 3.2rem;
+        font-size: 4rem;
         font-weight: bold;
         letter-spacing: -2px;
         margin-top: 32px;
@@ -34,7 +35,7 @@
         max-width: 340px;
       }
       .main-content h1 {
-        font-size: 2.6rem;
+        font-size: 3.2rem;
         font-weight: bold;
         margin-bottom: 2.5rem;
         color: #bfc1c4;
@@ -48,7 +49,7 @@
       .main-content .links a {
         display: block;
         color: #bfc1c4;
-        font-size: 1.3rem;
+        font-size: 1.6rem;
         font-weight: bold;
         text-decoration: none;
         margin-bottom: 0.5rem;
@@ -86,56 +87,169 @@
       /* Slightly bigger font for lists */
       .section-list div {
         color: #bfc3c7;
-        font-size: 24px;
+        font-size: 28px;
         font-family: PFDinTextPro-Bold, sans-serif;
         margin-bottom: 18px;
       }
 
-      /* Responsive adjustments (same as original) */
+      /* Responsive adjustments */
+      @media (max-width: 1200px) {
+        .caa-logo {
+          font-size: 3.5rem;
+          margin-left: 28px;
+        }
+        .main-content {
+          margin-left: 28px;
+          margin-top: 100px;
+          max-width: 400px;
+        }
+        .main-content h1 {
+          font-size: 2.8rem;
+        }
+      }
+
       @media (max-width: 900px) {
         .caa-logo {
+          margin-left: 20px;
+          font-size: 3rem;
+          margin-top: 28px;
+        }
+        .main-content {
+          margin-left: 20px;
+          margin-top: 80px;
+          max-width: calc(100vw - 40px);
+        }
+        .main-content h1 {
+          font-size: 2.5rem;
+          line-height: 1.3;
+        }
+        .main-content .links a {
+          font-size: 1.4rem;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .caa-logo {
+          font-size: 2.7rem;
           margin-left: 18px;
-          font-size: 2.2rem;
+          margin-top: 24px;
         }
         .main-content {
           margin-left: 18px;
           margin-top: 60px;
-          max-width: 90vw;
+          max-width: calc(100vw - 36px);
+        }
+        .main-content h1 {
+          font-size: 2.2rem;
+          line-height: 1.3;
+          margin-bottom: 2rem;
+        }
+        .main-content .links {
+          margin-top: 2rem;
+        }
+        .main-content .links a {
+          font-size: 1.3rem;
+          margin-bottom: 0.4rem;
+        }
+        .section-list div {
+          font-size: 24px;
+          margin-bottom: 14px;
+        }
+      }
+
+      @media (max-width: 600px) {
+        .caa-logo {
+          font-size: 2.4rem;
+          margin-top: 20px;
+          margin-left: 16px;
+        }
+        .main-content {
+          margin-top: 50px;
+          margin-left: 16px;
+          padding: 0;
+          max-width: calc(100vw - 32px);
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
         }
         .main-content h1 {
           font-size: 1.9rem;
+          line-height: 1.25;
+          margin-bottom: 1.5rem;
+          text-align: left;
+        }
+        .main-content .links {
+          margin-top: 1.5rem;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          width: 100%;
+        }
+        .main-content .links a {
+          font-size: 1.2rem;
+          text-align: left;
+          margin-bottom: 0.3rem;
+        }
+        .section-list div {
+          font-size: 22px;
+          margin-bottom: 12px;
         }
       }
-      @media (max-width: 600px) {
+
+      @media (max-width: 480px) {
         .caa-logo {
-          font-size: 72px;
-          margin-top: 40px;
-          margin-left: 24px;
+          font-size: 5rem;
+          margin-top: 16px;
+          margin-left: 12px;
         }
         .main-content {
-          margin-top: 0;
-          margin-left: 7rem;
-          padding: 0 10px;
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          justify-content: center;
-          min-height: 70vh;
+          margin-top: 40px;
+          margin-left: 12px;
+          max-width: calc(100vw - 24px);
         }
-        h1 {
-          font-size: 55px;
+        .main-content h1 {
+          font-size: 2rem;
           line-height: 1.2;
-          text-align: left;
+          margin-bottom: 1.2rem;
         }
-        .links {
-          margin-top: 56px;
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
+        .main-content .links {
+          margin-top: 1.7rem;
         }
-        .links a {
-          font-size: 24px;
-          text-align: left;
+        .main-content .links a {
+          font-size: 1.1rem;
+        }
+        .section-list div {
+          font-size: 20px;
+          margin-bottom: 10px;
+        }
+      }
+
+      @media (max-width: 360px) {
+        .caa-logo {
+          font-size: 1.8rem;
+          margin-top: 12px;
+          margin-left: 10px;
+        }
+        .main-content {
+          margin-top: 35px;
+          margin-left: 10px;
+          max-width: calc(100vw - 20px);
+        }
+        .main-content h1 {
+          font-size: 1.4rem;
+          line-height: 1.15;
+          margin-bottom: 1rem;
+        }
+        .main-content .links {
+          margin-top: 1rem;
+        }
+        .main-content .links a {
+          font-size: 1rem;
+        }
+        .section-list div {
+          font-size: 18px;
+          margin-bottom: 8px;
         }
       }
     </style>
@@ -155,8 +269,14 @@
     <div class="caa-logo">CAA</div>
     <div class="main-content">
       <!-- Original Section -->
-      <div id="original-section" class="fade-section active">
+      <div id="original-section" class="fade-section active" style="margin-top: 3rem">
         <h1 class="animated-lines">
+          <a
+            href="popular people.html"
+            class="line"
+            style="display: block; opacity: 0"
+            >Popular People</a
+          >
           <a
             href="musicians-singers.html"
             class="line"
@@ -173,32 +293,30 @@
             href="sports-personalities.html"
             class="line"
             style="display: block; opacity: 0"
-            >Sports Personalities (Athlete-Celebrities)</a
+            >Sports Personalities</a
           >
         </h1>
         <div class="links animated-links">
           <a
             class="link-item"
             href="about-us.html"
-            style="opacity: 0; display: block; font-size: 16px"
+            style="opacity: 0; display: block; font-size: 20px"
             >About</a
           >
           <!-- <a
             class="link-item"
             href="#"
-            style="opacity: 0; display: block; font-size: 16px"
+            style="opacity: 0; display: block; font-size: 20px"
             >Careers</a
           > -->
           <a
             class="link-item"
             href="#"
-            style="opacity: 0; display: block; font-size: 16px"
+            style="opacity: 0; display: block; font-size: 20px"
             >Contact</a
           >
         </div>
       </div>
-
-    
     </div>
 
     <script>
@@ -232,8 +350,6 @@
             });
           }
         );
-
-        
       });
     </script>
   </body>
