--- a/index.html
+++ b/index.html
@@ -269,7 +269,11 @@
     <div class="caa-logo">CAA</div>
     <div class="main-content">
       <!-- Original Section -->
-      <div id="original-section" class="fade-section active" style="margin-top: 3rem">
+      <div
+        id="original-section"
+        class="fade-section active"
+        style="margin-top: 3rem"
+      >
         <h1 class="animated-lines">
           <a
             href="popular people.html"
