--- a/musicians-singers.html
+++ b/musicians-singers.html
@@ -460,7 +460,7 @@
         </div>
         <div class="navbar-overlay-content">
           <h1 class="navbar-main-links">
-            <a class="nav-main-link" href="popular people.html.html"
+            <a class="nav-main-link" href="popular people.html"
               >Popular people</a
             ><br />
             <a class="nav-main-link" href="musicians-singers.html"
